[project]
name = "quantalogic_py_zerox"
version = "0.0.7"
description = "ocr documents using vision models from all popular providers like OpenAI, Azure OpenAI, Anthropic, AWS Bedrock etc"
authors = [
    { name = "wizenheimer" },
    { name = "pradhyumna85" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ocr", "document", "llm"]
dependencies = [
    "aiofiles>=23.0",
    "aiohttp>=3.9.5",
    "pdf2image>=1.17.0",
    "litellm>=1.44.15",
    "aioshutil>=1.5",
    "PyPDF2>=3.0.1"
]

[project.optional-dependencies]
dev = [
    "notebook>=7.2.1",
    "black>=24.4.2",
    "ruff"
]
test = [
    "pytest>=8.3.2"
]

[project.scripts]
pre-install = "py_zerox.scripts.pre_install:check_and_install"

[build-system]
requires = ["hatchling", "uv"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_zerox/pyzerox"]
