[project]
name = "quantalogic-py-zerox"
version = "0.0.8"
description = "ocr documents using vision models from all popular providers like OpenAI, Azure OpenAI, Anthropic, AWS Bedrock etc"
authors = [
    { name = "wizenheimer" },
    { name = "pradhyumna85" },
    { name = "raphaelmansuy" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ocr", "document", "llm"]
dependencies = [
    "aiofiles",
    "aiohttp",
    "pdf2image",
    "litellm",
    "aioshutil",
    "PyPDF2"
]

[project.optional-dependencies]
dev = [
    "notebook",
    "black",
    "ruff",
    "twine"
]
test = [
    "pytest"
]

[project.scripts]
pre-install = "py_zerox.scripts.pre_install:check_and_install"

[build-system]
requires = ["hatchling", "uv"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_zerox/pyzerox"]
